new login form, adding logout

--- a/weekly_training/templates/index.html
+++ b/weekly_training/templates/index.html
@@ -13,7 +13,7 @@
                 Привет, {{ request.user.username }}!
             </div>
             <div class="col-md-1">
-                <button class="btn btn-danger">
+                <button class="btn btn-danger" onclick="location.href='/accounts/logout'">
                     Выход
                 </button>
             </div>
