--- a/weekly_training/templates/login.html
+++ b/weekly_training/templates/login.html
@@ -2,11 +2,13 @@
 
 {% block extrahead %}
     <title>weekly-tng.Авторизация</title>
+    {% load staticfiles %}
+    <script src='{% static "css/login.css" %}'></script>
 {% endblock %}
 
 {% block content %}
 
-<div class="container-fluid">
+<div class="container">
     <row>
         <div class="col-md-12">
             {% if form.errors %}
@@ -14,11 +16,12 @@
             {% endif %}
         </div>
     </row>
-    <div class="row-fluid">
-        <div class="col-md-2 col-md-offset-5">
+    <div class="row">
+        <div class="col-sm-6 col-md-4 col-md-offset-4">
+            <div class="account-wall">
             <form method="post"
                   role="form"
-                  class="form"
+                  class="form-signin"
                   action="{% url 'django.contrib.auth.views.login' %}">
                 {% csrf_token %}
                 <div class="form-group">
@@ -27,6 +30,8 @@
                            maxlength="254"
                            placeholder="Имя"
                            name="username"
+                           autofocus
+                           required
                            type="text"/>
                 </div>
                 <div class="form-group">
@@ -34,15 +39,17 @@
                            placeholder="Пароль"
                            class="form-control"
                            name="password"
+                           required
                            type="password"/>
                 </div>
                 <input type="submit"
-                       class="btn btn-primary"
+                       class="btn btn-lg btn-primary btn-block"
                        value="Войти" />
                 <input type="hidden"
                        name="next"
                        value="{{ next }}" />
             </form>
+            </div>
         </div>
     </div>
 
