starting migrate to tornado

--- a/weekly_training/templates/base.html
+++ b/weekly_training/templates/base.html
@@ -6,12 +6,9 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    {% block extrahead %}
-    {% endblock %}
-</script>
+    <%block name='extrahead'></%block>
 </head>
 <body>
-    {% block content %}
-    {% endblock %}
+    <%block name='content'></%block>
 </body>
 </html>
