--- a/weekly_training/static/css/custom.css
+++ b/weekly_training/static/css/custom.css
@@ -1,5 +1,9 @@
 .gridStyle {
     border: 1px solid rgb(212,212,212);
-    width: 400px;
-    height: 300px
+    width: "**";
+    height: 400px
+}
+
+.top-buffer {
+    margin-top: 30px;
 }
