--- a/weekly_training/templates/index.html
+++ b/weekly_training/templates/index.html
@@ -6,6 +6,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular-route.js"></script>
     <script src="/static/js/ng-grid-2.0.1.min.js"></script>
     <script src="/static/js/app.js"></script>
+    <link rel="stylesheet" type="text/css" href="http://angular-ui.github.com/ng-grid/css/ng-grid.css" />
     <link rel="stylesheet" href="/static/css/custom.css">
 </%block>
 
@@ -36,8 +37,8 @@
                         Нечего показывать
                     </div>
                     <div class="tab-pane" id="trainings" ng-controller="TngGreed">
-                        <div class="row">
-                            <div class="col-md-5 col-md-offset-1">
+                        <div class="row top-buffer">
+                            <div class="col-md-9 col-md-offset-1">
                                  <div ng-grid="gridOptions" class="gridStyle"></div>
                             </div>
                         </div>
@@ -66,8 +67,16 @@
                                                id="goal"
                                                name="goal"
                                                required
-                                               autofocus
                                                />
+                                   </div>
+                                   <div class="form-group">
+                                       <select
+                                               class="form-control"
+                                               id="tng_type"
+                                               name="tng_type">
+                                           <option value="repetition">Повторения</option>
+                                           <option value="bool">Да/Нет</option>
+                                       </select>
                                    </div>
                                    <input type="submit"
                                            class="btn btn-success btn-block"
