--- a/weekly_training/templates/index.html
+++ b/weekly_training/templates/index.html
@@ -33,8 +33,12 @@
             </div>
             <div class="col-md-9">
                 <div class="tab-content">
-                    <div class="tab-pane active" id="home">
-                        Нечего показывать
+                    <div class="tab-pane active" id="home" ng-controller="CurrentWeek">
+                        <div class="row top-buffer">
+                            <div class="col-md-9 col-md-offset-1">
+                                 <div ng-grid="gridOptions" class="gridStyle"></div>
+                            </div>
+                        </div>
                     </div>
                     <div class="tab-pane" id="trainings" ng-controller="TngGreed">
                         <div class="row top-buffer">
