adding scheme file

--- a/weekly_training/templates/index.html
+++ b/weekly_training/templates/index.html
@@ -2,11 +2,12 @@
 
 <%block name='extrahead'>
     <title>weekly-tng.Главная</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/ng-grid.css" />
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js'></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular-route.js"></script>
     <script src="/static/js/ng-grid-2.0.1.min.js"></script>
     <script src="/static/js/app.js"></script>
-    <link rel="stylesheet" type="text/css" href="http://angular-ui.github.com/ng-grid/css/ng-grid.css" />
+
     <link rel="stylesheet" href="/static/css/custom.css">
 </%block>
 
