--- a/weekly_training/templates/index.html
+++ b/weekly_training/templates/index.html
@@ -16,10 +16,11 @@
         <div class="row">
 
             <div class="col-md-1 col-md-offset-9">
-                Привет, {{ request.user.username }}!
+                Привет, ${user.login}!
             </div>
             <div class="col-md-1">
-                <button class="btn btn-danger" onclick="location.href='/accounts/logout'">
+                <button class="btn btn-danger"
+                        onclick="location.href='/logout/'">
                     Выход
                 </button>
             </div>
