--- a/weekly_training/templates/login.html
+++ b/weekly_training/templates/login.html
@@ -1,29 +1,22 @@
-{% extends "base.html" %}
+<%inherit file='base.html' />
 
-{% block extrahead %}
+<%block name='extrahead'>
     <title>weekly-tng.Авторизация</title>
-    {% load staticfiles %}
-    <script src='{% static "css/login.css" %}'></script>
-{% endblock %}
+    <script src="/static/css/login.css"></script>
+</%block>
 
-{% block content %}
-
+<%block name='content'>
 <div class="container">
-    <row>
-        <div class="col-md-12">
-            {% if form.errors %}
-                <p>Your username and password didn't match. Please try again.</p>
-            {% endif %}
-        </div>
-    </row>
     <div class="row">
         <div class="col-sm-6 col-md-4 col-md-offset-4">
             <div class="account-wall">
             <form method="post"
                   role="form"
                   class="form-signin"
-                  action="{% url 'django.contrib.auth.views.login' %}">
-                {% csrf_token %}
+                  action="/login/">
+                <input type="text" value="${xsrf}"
+                    name="_xsrf" id="_xsrf"
+                    hidden/>
                 <div class="form-group">
                     <input id="id_username"
                            class="form-control"
@@ -45,13 +38,10 @@
                 <input type="submit"
                        class="btn btn-lg btn-primary btn-block"
                        value="Войти" />
-                <input type="hidden"
-                       name="next"
-                       value="{{ next }}" />
             </form>
             </div>
         </div>
     </div>
 
 </div>
-{% endblock %}
+</%block>
